fix gap

--- a/style.css
+++ b/style.css
@@ -146,6 +146,7 @@ form {
     margin-bottom: 40px;
     /* 📍 Свойства для расположения элементов (инпута и кнопки) и отступа между ними */
     display: flex;
+    gap: 10px;
 }
 
 .text-field {
